--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
   "name": "animated-todo",
+  "description": "A smoothly animated ToDo app built with React Native",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/craftzdog/react-native-animated-todo.git"
+  },
+  "author": {
+    "name": "Takuya Matsuyama",
+    "url": "https://www.craftz.dog/"
+  },
+  "license": "MIT",
+  "keywords": [
+    "react-native",
+    "tutorial",
+    "todo"
+  ],
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -12,12 +27,11 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
-    "@types/shortid": "^0.0.29",
     "expo": "~43.0.2",
     "expo-linking": "^2.4.2",
     "expo-status-bar": "~1.1.0",
     "moti": "^0.16.1",
-    "native-base": "^3.2.2",
+    "native-base": "^3.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -36,6 +50,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/shortid": "^0.0.29",
     "prettier": "^2.4.1",
     "typescript": "~4.3.5"
   },
