--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/craftzdog/react-native-animated-todo.git"
+    "url": "git+https://github.com/manuelduarte077/react-native-animated-todo.git"
   },
   "author": {
-    "name": "Takuya Matsuyama",
-    "url": "https://www.craftz.dog/"
+    "name": "Manuel Duarte",
+    "url": "https://github.com/manuelduarte077/"
   },
   "license": "MIT",
   "keywords": [
     "react-native",
-    "tutorial",
     "todo"
   ],
   "main": "node_modules/expo/AppEntry.js",
